@@ -6,7 +6,7 @@ system = serializer_yaml
 repo = serializer_yaml
 
 [authentication]
-module = authn_configfile
+module = authn_denyall
 
 [authorization]
 module = authz_allowall
