@@ -43,7 +43,7 @@ tftpd_bin: /usr/sbin/in.tftpd
 tftpd_conf: /etc/xinetd.d/tftp
 webdir: /var/www/cobbler
 xmlrpc_port: 25151
-xmlrpc_rw_enabled: 0
+xmlrpc_rw_enabled: 1
 xmlrpc_rw_port: 25152
 yum_post_install_mirror: 0
 yumdownloader_flags: "--resolve"
