@@ -22,6 +22,8 @@ Cobbler CHANGELOG
 - support for kerberos authentication
 - revamped pre/post install triggers system (triggered via cgi from kickstart wget)
 - logrotate should not send emails to root when restarting services
+- default core (but not repo add) repos to priority 1 (lowest) if using priorities plugin
+- change default authentication to deny_all, xmlrpc_rw_enabled now on by default
 
 - ??? - 0.8.3
 - Make createrepo get run for local cobbler reposync invocations as needed
